Remove complex module-path test execution
Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>